[package]
name = "pico2"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
cortex-m-rtic = "1.1.4"
critical-section = "1.2.0"
defmt = "1.0.1"
defmt-rtt = "1.1.0"
embedded-alloc = "0.6.0"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
panic-halt = "1.0.0"
rp235x-hal = "0.3.0"
